DMC-E系列控制卡例程/VB6.0/例3_回原点运动/LTDMC.bas

        
        Declare Function dmc_set_handwheel_filter Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal filter_factor As Double) As Integer
        Declare Function dmc_get_handwheel_filter Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef filter_factor As Double) As Integer
        
        Declare Function dmc_conti_get_interp_map Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef AxisNum As Integer, ByRef AxisList As Integer, ByRef pPosList As Double) As Integer
        
        Declare Function dmc_conti_get_crd_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef errcode As Integer) As Integer
        
        Declare Function dmc_line_unit_follow Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef Dist As Double, ByVal posi_mode As Integer) As Integer
        Declare Function dmc_conti_line_unit_follow Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef pPosList As Double, ByVal posi_mode As Integer, ByVal mark As Long) As Integer
               
        Declare Function dmc_conti_set_da_action Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal mode As Integer, ByVal portno As Integer, ByVal dvalue As Double) As Integer
        
        Declare Function dmc_read_encoder_speed Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef current_speed As Double) As Integer
        
        Declare Function dmc_axis_follow_line_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal enable_flag As Integer) As Integer
        
        Declare Function dmc_set_interp_compensation Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal dvalue As Double, ByVal time As Double) As Integer
        Declare Function dmc_get_interp_compensation Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef dvalue As Double, ByRef time As Double) As Integer
        
        Declare Function dmc_set_io_exactstop Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal ioNum As Integer, ByRef ioList As Integer, ByVal enable As Integer, ByVal valid_logic As Integer, ByVal action As Integer) As Integer
        
        Declare Function dmc_get_distance_to_start Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef distance_x As Double, ByRef distance_y As Double, ByVal imark As Long) As Integer
        
        Declare Function dmc_set_start_distance_flag Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal flag As Double) As Integer
        
        Declare Function dmc_set_home_soft_limit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal N_limit As Long, ByVal P_limit As Long) As Integer
        Declare Function dmc_get_home_soft_limit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef N_limit As Long, ByRef P_limit As Long) As Integer
        
        Declare Function dmc_conti_gear_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal follow_mode As Integer,ByVal imark As Long) As Integer
        
        '总线参数
        Declare Function nmc_set_home_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal home_mode As Integer, ByVal High_Vel As Double, ByVal Low_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal offsetpos As Double) As Integer
        Declare Function nmc_get_home_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef home_mode As Integer, ByRef High_Vel As Double, ByRef Low_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef offsetpos As Double) As Integer
        Declare Function nmc_home_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        
        Declare Function nmc_set_manager_para Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal Baudrate As Long, ByVal ManagerID As Integer) As Integer
        Declare Function nmc_get_manager_para Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByRef Baudrate As Long, ByRef ManagerID As Integer) As Integer
        Declare Function nmc_set_manager_od Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal index As Integer, ByVal subindex As Integer, ByVal valuelength As Integer, ByVal Value As Long) As Integer
        Declare Function nmc_get_manager_od Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal index As Integer, ByVal subindex As Integer, ByVal valuelength As Integer, ByRef Value As Long) As Integer
        Declare Function nmc_set_node_od Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal NodeNum As Integer, ByVal index As Integer, ByVal subindex As Integer, ByVal valuelength As Integer, ByVal Value As Long) As Integer
        Declare Function nmc_get_node_od Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal NodeNum As Integer, ByVal index As Integer, ByVal subindex As Integer, ByVal valuelength As Integer, ByRef Value As Long) As Integer
        Declare Function nmc_upload_configfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal FileName As String) As Integer
        Declare Function nmc_reset_to_factory Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal NodeNum As Integer) As Integer
        Declare Function nmc_write_to_pci Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal NodeNum As Integer) As Integer
        Declare Function nmc_download_configfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal FileName As String) As Integer
        Declare Function nmc_download_mapfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal FileName As String) As Integer
        
        Declare Function nmc_set_axis_enable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        Declare Function nmc_set_axis_disable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        Declare Function nmc_set_alarm_clear Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal NodeNum As Integer) As Integer
        Declare Function nmc_get_slave_nodes Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal Baudrate As Integer, ByRef NodeId As Integer, ByRef NodeNum As Integer) As Integer
        
        Declare Function nmc_get_total_axes Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalAxis As Integer) As Integer
        Declare Function nmc_get_total_adcnum Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalIn As Integer, ByRef TotalOut As Integer) As Integer
        Declare Function nmc_get_total_ionum Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalIn As Integer, ByRef TotalOut As Integer) As Integer
        
        Declare Function nmc_clear_alarm_fieldbus Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer) As Integer
        'EtherCAT
        Declare Function nmc_set_controller_workmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal controller_mode As Integer) As Integer
        Declare Function nmc_get_controller_workmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef controller_mode As Integer) As Integer
        Declare Function nmc_set_cycletime Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Fieldbustype As Integer, ByVal CycleTime As Long) As Integer
        Declare Function nmc_get_cycletime Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Fieldbustype As Integer, ByRef CycleTime As Long) As Integer
        Declare Function nmc_set_axis_run_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal run_mode As Integer) As Integer
        Declare Function dmc_get_perline_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal TypeIndex As Integer, ByRef Averagetime As Long, ByRef Maxtime As Long, ByRef Cycles As Long) As Integer
        
        Declare Function nmc_write_rxpdo_extra Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal address As Integer, ByVal DataLen As Integer, ByVal Value As Long) As Integer
        Declare Function nmc_read_rxpdo_extra Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal address As Integer, ByVal DataLen As Integer, ByRef Value As Long) As Integer
        Declare Function nmc_read_txpdo_extra Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal address As Integer, ByVal DataLen As Integer, ByRef Value As Long) As Integer
        
        Declare Function nmc_get_axis_type Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Axis_Type As Integer) As Integer
        Declare Function nmc_get_consume_time_fieldbus Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Fieldbustype As Integer, ByRef Average_time As Integer, ByRef Max_time As Integer, ByRef Cycles As Long) As Integer
        Declare Function nmc_clear_consume_time_fieldbus Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Fieldbustype As Integer) As Integer
        Declare Function nmc_stop_etc Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef ETCState As Integer) As Integer
          
        Declare Function nmc_get_axis_statusword Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef statusword As Long) As Integer
        Declare Function nmc_set_axis_contrlword Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal contrlword As Long) As Integer
        Declare Function nmc_get_axis_contrlword Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef contrlword As Long) As Integer
        Declare Function nmc_set_axis_contrlmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Contrlmode As Long) As Integer
        Declare Function nmc_get_axis_contrlmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Contrlmode As Long) As Integer
        
        Declare Function nmc_get_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer, ByRef errcode As Integer) As Integer
        Declare Function nmc_get_card_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef errcode As Integer) As Integer
        Declare Function nmc_get_axis_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef errcode As Integer) As Integer
        Declare Function nmc_clear_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal channel As Integer) As Integer
        Declare Function nmc_clear_card_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function nmc_clear_axis_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        
        Declare Function nmc_get_LostHeartbeat_Nodes Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByRef NodeId As Integer, ByRef NodeNum As Integer) As Integer
        Declare Function nmc_get_EmergeneyMessege_Nodes Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByRef NodeMsg As Long, ByRef MsgNum As Integer) As Integer
        Declare Function nmc_SendNmtCommand Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNum As Integer, ByVal NodeId As Integer, ByVal NmtCommand As Integer) As Integer
        Declare Function nmc_syn_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef position As Long, ByRef PosiMode As Integer) As Integer
        Declare Function nmc_syn_move_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef position As Double, ByRef PosiMode As Integer) As Integer
